Fix nowrap issues in Chrome #744

--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -3,6 +3,8 @@
 }
 .sidebarred-main-content {
   flex: 1;
+  /* To prevent nowrap issues in Chrome */
+  width: 100%;
 }
 .sidebar {
   width: 200px;
